@@ -63,14 +63,13 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 496)
-(Parent-Version lpmud 3-3 495)
-(Version-Log "Added new efun net_connect().
-Corrected efun variable_list().")
+(Project-Version lpmud 3-3 497)
+(Parent-Version lpmud 3-3 496)
+(Version-Log "When using net_connect(), the current_object got clobbered.")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Fri, 21 Nov 2003 22:43:46 -0700")
+(Checkin-Time "Sun, 14 Dec 2003 22:14:55 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -108,7 +107,7 @@ Corrected efun variable_list().")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.70 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.559 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.560 644))
   (HISTORY (lpmud/f/49_HISTORY 1.338 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -147,7 +146,7 @@ Corrected efun variable_list().")
   (src/settings/lpmud.net (lpmud/e/b/7_lpmud.net 1.1 744))
   (src/settings/osb (lpmud/c/8_osb 1.19 744))
   (src/settings/pkmud (lpmud/c/25_pkmud 1.5.1.5 744))
-  (src/settings/psycmuve (lpmud/i/42_psycmuve 1.1.1.6 744))
+  (src/settings/psycmuve (lpmud/i/42_psycmuve 1.1.1.7 744))
   (src/settings/quovadis (lpmud/h/12_quovadis 1.1.1.7 744))
   (src/settings/silberland (lpmud/c/26_silberland 1.4.1.5 744))
   (src/settings/sticklib (lpmud/d/14_sticklib 1.2.1.1.1.5 744))
@@ -176,7 +175,7 @@ Corrected efun variable_list().")
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.17 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.68 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.69 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.38 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -201,7 +200,7 @@ Corrected efun variable_list().")
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.7 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.64 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.49 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.50 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.76 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
