@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+14-Dec-2003 (Lars Duening)  (3.3.497)
+  - (comm) When opening a connection with net_connect(), printing of
+       the prompt clobbered the current_object, causing a crash.
+
 21-Nov-2003 (Lars Duening)  (3.3.496)
   - (comm) Added new efun net_connect() (thanks, LynX!)
   - (object.c, sys/functionlist.h) Efun variable_list() didn't properly
